--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "com.TRDA.DValley",
-  "main": "dist/app.js",
+  "main": "src/app.js",
   "private": true,
   "scripts": {
     "test": "eslint .",
-    "build": "babel --compact false --out-dir dist/ src/",
     "start": "tabris serve"
   },
   "dependencies": {
